<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButtonIsFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/fab"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="?colorPrimary"
                    app:srcCompat="@drawable/baseline_favorite_border_24" />

                <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/detailActivity_display_picture_content_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/detailActivityName"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.595"
                    app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                    app:layout_constraintTop_toTopOf="@+id/imageViewAvatar"
                    tools:text="Yo An Lin" />

                <TextView
                    android:id="@+id/textViewBio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/detailActivityBio"
                    app:layout_constraintBottom_toTopOf="@+id/textViewLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/textViewName"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="a developer who really loves crafting tools" />

                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/detailActivityBio"
                    app:layout_constraintBottom_toTopOf="@id/barrier2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBio"
                    tools:text="Taipei, Taiwan" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="imageViewAvatar,textViewName,textViewLocation,textViewBio"
                    tools:layout_editor_absoluteY="24dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/detailActivityStatsBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:contentPaddingBottom="14dp"
                    app:contentPaddingTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/barrier2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewFollowersNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/detailActivityStatsNumber"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="@+id/textViewFollowers"
                            app:layout_constraintStart_toStartOf="@+id/textViewFollowers"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="503" />

                        <TextView
                            android:id="@+id/textViewFollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textColor="@color/detailActivityStatsLabel"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textViewFollowersNumber" />

                        <TextView
                            android:id="@+id/textViewRepositories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repositories"
                            android:textColor="@color/detailActivityStatsLabel"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textViewFollowers"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textViewRepos" />

                        <TextView
                            android:id="@+id/textViewRepos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/detailActivityStatsNumber"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="@+id/textViewRepositories"
                            app:layout_constraintStart_toStartOf="@+id/textViewRepositories"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="54545" />

                        <TextView
                            android:id="@+id/textViewFollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followings"
                            android:textColor="@color/detailActivityStatsLabel"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textViewFollowers"
                            app:layout_constraintTop_toBottomOf="@+id/textViewFollowingNumber" />

                        <TextView
                            android:id="@+id/textViewFollowingNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/detailActivityStatsNumber"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="@+id/textViewFollowing"
                            app:layout_constraintStart_toStartOf="@+id/textViewFollowing"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="233232" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutFollow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/tab_layout_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardView"
                    app:tabBackground="@drawable/tabs_selector"
                    app:tabIndicator="@null"
                    app:tabSelectedTextColor="@color/tabLayoutTabSelectedTextColor"
                    app:tabTextColor="@color/tabLayoutTextColor" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerFollow"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabLayoutFollow" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <include
        android:id="@+id/layoutNoResult"
        layout="@layout/layout_no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>

